--- a/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
@@ -18,7 +18,7 @@
             <p>
                 <span id="ordem_{{pergunta_do_questionario.pk}}">{{pergunta_do_questionario.ordem}}</span>
                 -
-                {{pergunta_do_questionario.pergunta.variavel}}:{{pergunta_do_questionario.pergunta.verbose_name_tipo}}
+                {{pergunta_do_questionario.pergunta.variavel}}
             </p>
             <p> 
                 {{pergunta_do_questionario.pergunta.texto}}
