TYPO .js no filter.js.....wtf

--- a/pmsb_web/conta/templates/conta/base.html
+++ b/pmsb_web/conta/templates/conta/base.html
@@ -31,7 +31,7 @@
 <script src="{% static 'node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js' %}"></script>
 <script src="{% static 'node_modules/coreui/coreui/dist/js/coreui.min.js' %}"></script>
 <script src="{% static 'js/actions.js' %}"></script>
-<script src="{% static 'js/filter.js.js' %}"></script>
+<script src="{% static 'js/filter.js' %}"></script>
 {% block js %}
 {% endblock js %}
 </body>
