--- a/pmsb_web/conta/templates/dashboard/organograma.html
+++ b/pmsb_web/conta/templates/dashboard/organograma.html
@@ -9,7 +9,7 @@
                     {% elif tree_list %}
                     <div class="btn-align"><i class="nav-icon fa fa-sitemap"></i>Organograma Hierárquico</div>
                     {% elif departamentos %}
-                    <div class="btn-align"><i class="nav-icon fa fa-sitemap"></i>Organograma dos Departamentos e Cargos</div>
+                    <div class="btn-align"><i class="nav-icon fa fa-sitemap"></i>Organograma das Áreas e Cargos</div>
                     {% endif %}
                 </div>
                 {% if not dep %}
