--- a/pmsb_web/questionarios/templates/questionarios/base.html
+++ b/pmsb_web/questionarios/templates/questionarios/base.html
@@ -6,27 +6,36 @@
         margin-bottom: 20px;
     }
 </style>
+
 <div class="justify-content-center pinax-messages-inbox-container" style="margin-top: 10px;">
     <div class="card">
-        <div id="questionarios" class="row">
-            <div class="col-lg-6 offset-lg-3">
-                <div class="row">
-                    <div class="col-lg-12">
-                        {% block ul_menu %}
 
-                        {% endblock ul_menu%}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        {% block conteudo%}
-                        super
-                        {% endblock %}
-                    </div>
-                </div>
+    <div class="card-header">
+        <div class="row">
+            <div class="col-sm">
+                <div class="btn-align"><i class="nav-icon fa icon-note"></i>Questionarios</div>
             </div>
-            <!--col-lg-12-->
-        </div><!-- row -->
+            <div class="col-sm">
+                {% block ul_menu %}
+
+                {% endblock ul_menu%}
+            </div>
+        </div>
+    </div>
+
+    <div class="card-body">
+        <h2 style="text-align: center;">{% block card_titulo %} Questionarios {% endblock %}</h2>
+    </div>
+
+    <div class="row" style="margin-bottom: 70px;">
+        <div class="col-lg-10 offset-lg-1">
+            {% block conteudo%}
+            super
+            {% endblock %}                    
+        </div>
+    </div>
+
+
     </div>
 </div>
 {% endblock %}
