--- a/pmsb_web/questionarios/templates/questionarios/list_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/list_questionario.html
@@ -1,7 +1,7 @@
 {% extends "questionarios/base.html" %}
 
 {% block ul_menu %}
-<a class="btn btn-success" href=" {% url "questionarios:create"%}">Novo Questionario</a>
+<a style="float:right;" class="btn btn-success" href=" {% url "questionarios:create"%}"> <i class="nav-icon fa icon-note" style="color:white;"></i>Novo Questionario</a>
 {% endblock ul_menu%}
 
 {% block conteudo %}
