--- a/pmsb_web/questionarios/templates/questionarios/list_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/list_questionario.html
@@ -1,7 +1,9 @@
 {% extends "questionarios/base.html" %}
 
 {% block ul_menu %}
-<a style="float:right;" class="btn btn-success" href=" {% url "questionarios:create"%}"> <i class="nav-icon fa icon-note" style="color:white;"></i>Novo Questionario</a>
+<a style="float:right;" class="btn btn-success" href=" {% url "questionarios:create"%}">
+    <i class="nav-icon fa icon-note" style="color:white;"></i>Novo Questionario
+</a>
 {% endblock ul_menu%}
 
 {% block conteudo %}
@@ -28,9 +30,17 @@
         <li class="list-group-item">Nenhuma pergunta</li>
         {% endfor %}
     </ul>
+        
     </div>
 </div>
 {% endfor %}
 
+<div style="margin-top:50px;" class="row">
+    <div class="col-lg-12">
+        <a  class="btn btn-primary" href=" {% url "questionarios:subordinados"%}">
+            Questionarios de Subordinados
+        </a>
+    </div>
+</div>
 
 {% endblock %}
