--- a/pmsb_web/questionarios/templates/questionarios/create_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/create_questionario.html
@@ -1,13 +1,21 @@
 {% extends "questionarios/base.html" %}
 
 
-{% block titulo %} {{block.super}} listagem {% endblock titulo %}
+{% block titulo %} {{block.super}} | Criar Questionario {% endblock titulo %}
 
 {% block conteudo %}
-<form method="post">
-    {% csrf_token %}
-    {% include "includes/form.html" with form=form %}
-    <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
-    <button type="submit" class="btn btn-success">Criar</button>
-</form>
+<div class="row">
+    <div class="col-lg-12">
+
+        <h3>Criar Questionario</h3>
+
+        <form method="post">
+            {% csrf_token %}
+            {% include "includes/form.html" with form=form %}
+            <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
+            <button type="submit" class="btn btn-success">Criar</button>
+        </form>
+        
+    </div>
+</div>
 {% endblock %}
