--- a/pmsb_web/questionarios/templates/questionarios/create_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/create_questionario.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-lg-12">
 
-        <h3>Criar Questionario</h3>
+        <h3>Novo Questionário</h3>
 
         <form method="post">
             {% csrf_token %}
@@ -15,7 +15,7 @@
             <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
             <button type="submit" class="btn btn-success">Criar</button>
         </form>
-        
+
     </div>
 </div>
 {% endblock %}
