--- a/pmsb_web/questionarios/templates/questionarios/list_questionario_equipe.html
+++ b/pmsb_web/questionarios/templates/questionarios/list_questionario_equipe.html
@@ -3,8 +3,16 @@ a{% extends "questionarios/base.html" %}
 {% block conteudo %}
 
 <h3>
-    Questionarios de Seus Subordinados
+    Questionarios de sua equipe
 </h3>
+
+<div style="margin-top:50px;" class="row">
+    <div class="col-lg-12">
+        <a  class="btn btn-primary" href=" {% url "questionarios:list"%}">
+            Voltar
+        </a>
+    </div>
+</div>
 
 {% for questionario in object_list %}
 <div class="row">
@@ -47,13 +55,4 @@ a{% extends "questionarios/base.html" %}
 </div>
 {% endfor %}
 
-
-
-<div style="margin-top:50px;" class="row">
-    <div class="col-lg-12">
-        <a  class="btn btn-primary" href=" {% url "questionarios:list"%}">
-            Voltar
-        </a>
-    </div>
-</div>
 {% endblock %}
