quebra de linha entre variavel e texto

--- a/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
@@ -18,7 +18,7 @@
             <p>
                 <span id="ordem_{{pergunta_do_questionario.pk}}">{{pergunta_do_questionario.ordem}}</span>
                 -
-                {{pergunta_do_questionario.pergunta.variavel}}:
+                {{pergunta_do_questionario.pergunta.variavel}}:<br>
                 {{pergunta_do_questionario.pergunta.texto}}
                 
             </p>
