--- a/pmsb_web/questionarios/templates/questionarios/update_pergunta_requisito.html
+++ b/pmsb_web/questionarios/templates/questionarios/update_pergunta_requisito.html
@@ -1,15 +1,21 @@
 {% extends "questionarios/base.html" %}
+{% load widget_tweaks %}
 
 {% block conteudo %}
 
 <div class="row">
     <div class="col-lg-12">
+        <p>
+            <a class="btn btn-primary" onclick="window.history.go(-1);">Voltar</a>
+        </p>
+    
         <h2>Escolher pergunta requisito para: {{object.pergunta.variavel}}</h2>
         
         {% if pergunta_questionario %}
         <form method="post">
             {% csrf_token %}
-            {% include "includes/form.html" with form=form %}
+            {% render_field form.pergunta_requisito class="form-control is-invalid" value=pergunta_questionario.pergunta.pk %}
+            
             <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
             <button type="submit" class="btn btn-success">Salvar</button>
         </form>
@@ -19,28 +25,40 @@
 
 <!-- Questionarios -->
 {% if questionarios %}
-
+    <h4>Lista de Questionarios:</h4>
+    <ul class="list-group">
     {% for questionario in questionarios %}
-    <p><a href="{% url "questionarios:update_pergunta_requisito_questionario" object.pk questionario.pk %}">{{questionario}}</a></p>
+    <li class="list-group-item">
+    <a href="{% url "questionarios:update_pergunta_requisito_questionario" object.pk questionario.pk %}">{{questionario}}</a>
+    </li>
     {% empty %}
-    <p>Nenhum questionario</p>
+    <li class="list-group-item">Nenhum questionario</li>
     {% endfor %}
+    </ul>
 
 {% endif %}
 
 <!-- Perguntas -->
 {% if perguntas %}
+    <h4>Lista de Perguntas:</h4>
+    <ul class="list-group">
 
     {% for pergunta_questionario in perguntas %}
-    <p>
-        <h3>{{pergunta_questionario.pergunta.variavel}}</h3>
-        {{pergunta_questionario.pergunta.texto}}
-        <a class="btn btn-primary" href="{% url "questionarios:update_pergunta_requisito_pergunta" object.pk pergunta_questionario.pk %}">Selecionar</a>
-    </p>
-        
+    <li class="list-group-item">
+        <h3>{{pergunta_questionario.pergunta.variavel}}
+            <a class="btn btn-primary" href="{% url "questionarios:update_pergunta_requisito_pergunta" object.pk pergunta_questionario.pk %}">Selecionar</a>
+        </h3>
+        <p>
+            {{pergunta_questionario.pergunta.texto}}
+        </p>
+    </li>
     {% empty %}
+    <li class="list-group-item">
         Nenhum pergunta
+    </li>
     {% endfor %}
+
+    </ul>
 
 {% endif %}
 
