--- a/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
+++ b/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
@@ -11,7 +11,19 @@
         <form method="post">
             {% csrf_token %}
             {% include "includes/form.html" with form=form %}
+            
+            <div class="form-group">
+                <label>Pergunta Requisito:</label>
+            {% if object.pergunta_requisito %}
+                {{object.pergunta_requisito}}
+                {% else %}
+                Sem pergunta requisito
+            {% endif %}
+                <a class="btn btn-primary" href="{% url "questionarios:update_pergunta_requisito" pergunta_do_questionario_pk %}">Editar</a>
+            </div>
+
             <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
+            
             <button type="submit" class="btn btn-success">Salvar</button>
         </form>
     </div>
