add .js script action/filter

--- a/pmsb_web/core/templates/core/base.html
+++ b/pmsb_web/core/templates/core/base.html
@@ -21,13 +21,9 @@
   <link rel="stylesheet" href="{% static 'node_modules/dtree/dtree.css' %}" type="text/css" />
   <script type="text/javascript" src="{% static 'node_modules/dtree/dtree.js' %}"></script>
 </head>
-
 <body>
-
 {% block conteudo %}
-
 {% endblock conteudo %}
-
 <script src="{% static 'node_modules/jquery/dist/jquery.min.js' %}"></script>
 <script src="{% static 'node_modules/popper.js/dist/umd/popper.min.js' %}"></script>
 <script src="{% static 'node_modules/bootstrap/dist/js/bootstrap.min.js' %}"></script>
@@ -35,10 +31,9 @@
 <script src="{% static 'js/jquery.mask.js' %}"></script>
 <script src="{% static 'node_modules/perfect-scrollbar/dist/perfect-scrollbar.min.js' %}"></script>
 <script src="{% static 'node_modules/coreui/coreui/dist/js/coreui.min.js' %}"></script>
-
+<script src="{% static 'js/actions.js' %}"></script>
+<script src="{% static 'js/filter.js' %}"></script>
 {% block js %}
 {% endblock js %}
-
 </body>
-
 </html>
