--- a/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
+++ b/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="col-sm">
                     {% if 'pinax_messages.add_thread' in perms %}
-                    <a class="btn btn-primary" style="float: right;" href="{% url 'pinax_messages:message_create' %}">
+                    <a class="btn btn-success" style="float: right;" href="{% url 'pinax_messages:message_create' %}">
                         <i class="nav-icon fa icon-list" style="color:white;"></i>
                         Designar Tarefa
                     </a>
