--- a/pmsb_web/pinax/messages/templates/pinax/messages/thread_detail.html
+++ b/pmsb_web/pinax/messages/templates/pinax/messages/thread_detail.html
@@ -27,10 +27,10 @@
                                 style="padding: 5px;">
                                 {% csrf_token %} {{ form.as_p }}
                                 <div class="form-actions" style="padding: 5px;">
-                                    <button type="submit" href="{% url 'pinax_messages:thread_detail' thread.pk %}" class="btn btn-warning ">Enviar</button>
+                                    <button type="submit" href="{% url 'pinax_messages:thread_detail' thread.pk %}" class="btn btn-primary">Enviar</button>
                                     <a href="{% url 'pinax_messages:inbox' %}" class="btn btn-primary " style="float: right;">Voltar</a>
                                     {% if thread.first_message.sender == user %}
-                                    <a class="btn btn-danger" style="float: right; margin-right: 10px;" href="{% url 'pinax_messages:thread_delete' thread.pk %}"><i class="nav-icon fa fa-check" style="color:white;"></i>Marcar como concluída</a>
+                                    <a class="btn btn-success" style="float: right; margin-right: 10px;" href="{% url 'pinax_messages:thread_delete' thread.pk %}"><i class="nav-icon fa fa-check" style="color:white;"></i>Marcar como concluída</a>
                                     <a class="btn btn-danger" style="float: right; margin-right: 10px;" href="{% url 'pinax_messages:thread_fake_delete' thread.pk %}"><i class="nav-icon fa fa-trash" style="color:white;"></i>Excluir tarefa</a>
                                     {% endif %}
                                 </div>
