--- a/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
@@ -13,43 +13,7 @@
     </p>
     
     <ul id="sortable" class="list-group">
-        {% for pergunta_do_questionario in object.perguntas_do_questionario %}
-        <li id="{{pergunta_do_questionario.pk}}" class="list-group-item">
-            <h3>
-                <span id="ordem_{{pergunta_do_questionario.pk}}">{{pergunta_do_questionario.ordem}}</span>
-                -
-                {{pergunta_do_questionario.pergunta.variavel}}
-            </h3>
-            <h3>
-                {{pergunta_do_questionario.pergunta.verbose_name_tipo}}
-                {% if pergunta_do_questionario.pergunta.tipo == 0 %}
-                - {{pergunta_do_questionario.pergunta.perguntaescolha.multipla_verbose}}
-                {% endif %}
-            </h3>
-            <p>
-                {{pergunta_do_questionario.pergunta.texto}}
-            </p>
-            {% if pergunta_do_questionario.pergunta.tipo == 0 %}
-            <h3>Escolhas:</h3>
-            <ul>
-            {% for escolha in pergunta_do_questionario.pergunta.perguntaescolha.possiveis_escolhas.all %}
-            <li>
-                <p>
-                    {{escolha.texto}}
-                </p>
-            </li>
-            {% empty%}
-            <p>
-                Sem escolhas
-            </p>
-            {% endfor%}
-            </ul>
-            
-            {% endif %}
-        </li>
-        {% empty %}
-        <li class="list-group-item">Nenhuma pergunta</li>
-        {% endfor %}
+        {% include "questionarios/includes/pergunta.html" with perguntas_do_questionario=object.perguntas_do_questionario %}
     </ul>
     </div>
 </div>
