--- a/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
+++ b/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
@@ -12,22 +12,54 @@
             {% csrf_token %}
             {% include "includes/form.html" with form=form %}
             
-            <div class="form-group">
-                <label>Pergunta Requisito:</label>
-            {% if object.pergunta_requisito %}
-                {{object.pergunta_requisito}}
-                {% else %}
-                Sem pergunta requisito
-            {% endif %}
-                <a class="btn btn-primary" href="{% url "questionarios:update_pergunta_requisito" pergunta_do_questionario_pk %}">Editar</a>
-            </div>
-
             <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
             
             <button type="submit" class="btn btn-success">Salvar</button>
         </form>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <h4>Perguntas Requisito</h4>
+
+        <ul class="list-group">
+        {% for requisito in object.perguntarequisito_set.all %}
+        
+        
+        <li class="list-group-item">{{requisito}}
+            <a href="{% url "questionarios:perguntarequisito_delete" pergunta_do_questionario_pk requisito.pk %}"><span class="badge badge-secondary">Remover</span></a>
+        </li>
+        {% empty %}
+        
+        <li class="list-group-item">Sem Pergunta Requisito</li>
+        
+        {% endfor %}
+        </ul>
+        <a class="btn btn-primary" href="{% url "questionarios:perguntarequisito_create" pergunta_do_questionario_pk %}">Adicionar Pergunta Requisito</a>
+    </div>
+</div>
+
+<div class="row">
+        <div class="col-lg-12">
+            <h4>Escolhas Requisito</h4>
+    
+            <ul class="list-group">
+            {% for requisito in object.escolharequisito_set.all %}
+            
+            
+            <li class="list-group-item">{{requisito}}
+                <a href="{% url "questionarios:escolharequisito_delete" pergunta_do_questionario_pk requisito.pk %}"><span class="badge badge-secondary">Remover</span></a>
+            </li>
+            {% empty %}
+            
+            <li class="list-group-item">Sem Pergunta Requisito</li>
+            
+            {% endfor %}
+            </ul>
+            <a class="btn btn-primary" href="{% url "questionarios:escolharequisito_create" pergunta_do_questionario_pk %}">Adicionar Escolha Requisito</a>
+        </div>
+    </div>
 
 {% if object.tipo == 0 %}
 
