--- a/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
+++ b/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
@@ -24,7 +24,7 @@
         <h4>Perguntas Requisito</h4>
 
         <ul class="list-group">
-        {% for requisito in object.perguntarequisito_set.all %}
+        {% for requisito in object.perguntarequisito_fake_delete %}
         
         
         <li class="list-group-item">{{requisito}}
@@ -45,7 +45,7 @@
             <h4>Escolhas Requisito</h4>
     
             <ul class="list-group">
-            {% for requisito in object.escolharequisito_set.all %}
+            {% for requisito in object.escolharequisito_fake_delete %}
             
             
             <li class="list-group-item">{{requisito}}
@@ -72,7 +72,7 @@
 <div class="row">
     <div class="col-lg-12">
         <ul class="list-group">
-        {% for a in object.possiveis_escolhas.all %}
+        {% for a in object.possiveis_escolhas_fake_delete %}
             <li class="list-group-item">{{a.texto}}
                 <a href="{% url "questionarios:update_possivelescolha" pergunta_do_questionario_pk a.pk %}"><span class="badge badge-secondary">Editar</span></a>
                 <a href="{% url "questionarios:delete_possivelescolha" pergunta_do_questionario_pk a.pk %}"><span class="badge badge-secondary">Remover</span></a>
