--- a/pmsb_web/questionarios/templates/questionarios/perguntarequisito_delete.html
+++ b/pmsb_web/questionarios/templates/questionarios/perguntarequisito_delete.html
@@ -7,7 +7,7 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Apagar</button>
-    <a href="{% url "questionarios:list" %}" class="btn btn-primary">Cancelar</a>
+    <a href="{% url "questionarios:update_pergunta" pergunta_do_questionario_pk %}" class="btn btn-primary">Cancelar</a>
 </form>
 
 {% endblock %}
