--- a/pmsb_web/questionarios/templates/questionarios/escolharequisito_create.html
+++ b/pmsb_web/questionarios/templates/questionarios/escolharequisito_create.html
@@ -12,7 +12,7 @@
             {% csrf_token %}
             {% include "includes/form.html" with form=form %}
             
-            <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
+            <a class="btn btn-primary" href="{% url "questionarios:update_pergunta" pergunta_do_questionario_pk %}">Voltar</a>
             
             <button type="submit" class="btn btn-success">Salvar</button>
         </form>
